D47-Gateway-API/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: core-ui-route
  namespace: default
spec:
  parentRefs:       # your gateway name
  - name: my-nginx-gateway
    namespace: nginx-gateway
  # hostnames:
  # - "core-ui.127.0.0.1.nip.io" # Maps to localhost
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: core-ui-svc  # service name
      port: 80  # we exposed the service at port 80
